@@ -2,6 +2,8 @@ Changes in @NEW@:
   o Client Changes:
     * A new configuration option, "flavorPreferences", has been added.
       The client uses this list of flavors in trove selection. (CNY-1710)
+    * When signals are received during updates the journal is now rolled
+      back before conary terminates (CNY-1393)
 
   o Build Changes:
     * Redirects will now be followed in group recipes.  Previously including
